--- a/TestTask/TestTask.csproj
+++ b/TestTask/TestTask.csproj
@@ -7,14 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DataModel\RequestDTO\**" />
+    <Content Remove="DataModel\RequestDTO\**" />
+    <EmbeddedResource Remove="DataModel\RequestDTO\**" />
+    <None Remove="DataModel\RequestDTO\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DataModel\RequestDTO\" />
   </ItemGroup>
 
 </Project>
